--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     Properties Editor <i class="icon icon-shield"></i>
     <span id="about">
       <a href="https://github.com/opoto/properties-editor/blob/master/README.md">
-        <img alt="GitHub icon" src="img/github-mark.svg"/>
+        <i class="icon icon-github-circled" title="Link to GitHub project"></i>
       </a>
     </span>
   </h1>
