--- a/encdec.html
+++ b/encdec.html
@@ -9,6 +9,7 @@
   <title>EncDec lib</title>
   <link rel="stylesheet" href="css/properties-editor.css" />
   <link rel="stylesheet" href="css/fontello.css" />
+  <link rel="stylesheet" href="css/animation.css" />
   <link rel="stylesheet" href="css/properties-editor.css" />
   <script src="js/cash-8.1.4.min.js"></script>
   <script src="js/qrcode.min.js"></script>
@@ -51,7 +52,7 @@
     EncDec lib
     <span id="about">
       <a href="https://github.com/opoto/properties-editor/blob/master/README.md">
-        <img alt="GitHub icon" src="img/github-mark.svg" />
+        <i class="icon icon-github-circled" title="Link to GitHub project"></i>
       </a>
     </span>
   </h1>
@@ -183,7 +184,7 @@
       <td>
         <input id="post-fileurl" type="text" size="30" class="hidden post-result"></span>
         <i id="post-fileurl-copy" class="icon icon-clone post-result" title="Copy URL to clipboard"></i>
-        <i id="post-qrcode-show" class="icon icon-share clickable" title="Share as QR Code"></i>
+        <i id="post-qrcode-show" class="icon icon-qrcode clickable" title="Share as QR Code"></i>
         <span id="post-status"></span>
         <br>
       </td>
@@ -361,7 +362,7 @@
 
     $("#post-button").on("click", async () => {
       $("#post-button")[0].setAttribute("disabled", true);
-      $("#post-status").text("Wait while uploading...");
+      $("#post-status").html('Wait while uploading... <i class="icon-spin6 animate-spin"></i>');
       const enc = $("#enc").val();
       let days = localStorage.getItem("dpaste.days");
       days = days ? days : 1;
