remove extra URL encoding

--- a/encdec.html
+++ b/encdec.html
@@ -402,7 +402,7 @@
         },
         body: new URLSearchParams({
           'expiry_days': days,
-          'content': encodeURIComponent(enc)
+          'content': enc
         })
       };
       const apiToken = localStorage.getItem("dpaste.apiToken");
