remove debug log

--- a/encdec.html
+++ b/encdec.html
@@ -302,7 +302,7 @@
         lastPassword = $("#pwd3").val();
         pwd += lastPassword;
       }
-      console.debug("Password: " + pwd);
+      //console.debug("Password: " + pwd);
       estimatePasswordStrength(pwd);
       return pwd;
     }
